WEB-178 play now button alignment bugs fixed

--- a/src/app/pages/view/view.component.scss
+++ b/src/app/pages/view/view.component.scss
@@ -159,7 +159,7 @@ live {
   }
 
   .imagesText {
-    height: 300px;
+    height: 293px;
     align-items: flex-end;
   }
 }
